# OOP

Lab03_WavCore/task/: CMakeLists.txt
Lab03_WavCore/task/src/: wav_core.h
Lab3_WavCore/task/: main.cpp
Lab3_WavCore/task/src/: wav_core.cpp
lab1_IniParser/: .gitignore  CMakeLists.txt  main.cpp
lab1_IniParser/src/: Exceptions.hpp  Parser.cpp  Parser.hpp  main.cpp
lab2_StatisticMultiset/: .gitignore  CMakeLists.txt  main.cpp
lab2_StatisticMultiset/src/: StatisticMultiset.cpp  StatisticMultiset.hpp
lab3_WavCore/: .gitignore  CMakeLists.txt  main.cpp
lab3_WavCore/src/: WavException.h  WavHeader.h  WavReader.cpp  WavReader.hpp
lab3_WavCore/task/: CMakeLists.txt  main.cpp
lab3_WavCore/task/src/: wav_core.cpp  wav_core.h  wav_header.h
lab4_FactorisationAlgorithms/: CMakeLists.txt  main.cpp
lab4_FactorisationAlgorithms/src/algorithms/: Brent.hpp  Fermat.hpp  PollardRho.hpp  TrialDevision.hpp  TrialDivision.hpp
lab4_FactorisationAlgorithms/src/core/: CheckSystem.cpp  CheckSystem.hpp  FactorizationAlgorithm.hpp  Factorizer.hpp  Randomizer.hpp  ThreadPool.hpp
lab4_FactorisationAlgorithms/src/utils/: CommonFunctions.cpp  CommonFunctions.hpp
lab4_ThreadsExamples/: ThreadPool.hpp  main.cpp
